--- a/p2.ipynb
+++ b/p2.ipynb
@@ -82,10 +82,7 @@
    "outputs": [],
    "source": [
     "# Print the tree\n",
-    "tree_to_code(dt, list(iris.feature_names))\n",
-    "\n",
-    "# ===== Test and report test error ===== #\n",
-    "# ===== End of Test and report test error ===== #"
+    "tree_to_code(dt, list(iris.feature_names))"
    ]
   }
  ],
